Implement Google Maps API
Created a Google Maps API, as well as creating an activity that
displays the map.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!--Hardcode your API key like this. Don't use this test one!-->
     <string name="apikey">51B4A229-C683-477B-B37E-1ABF72610F869</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
