--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="input_pass_txtview">Choose a password:</string>
     <string name="confirm_pass_txtview">Confirm your password:</string>
     <string name="signup_btn">Sign Up</string>
+    <string name="name">Name:</string>
+    <string name="full_name_sign">Donald Trump</string>
+    <string name="password">Password</string>
+    <string name="password">Password</string>
+    <string name="email_address">john123@gmail.com</string>
 </resources>
