--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="apikey">51B4A229-C683-477B-B37E-1ABF72610F869</string>
     <string name="loginTitle">Login</string>
     <string name="emailEdit">E-mail</string>
+    <string name="password">Password</string>
     <string name="sign_up_prompt">Don\'t Have An Account?  Sign Up Here</string>
     <string name="signup_txtview">Sign Up</string>
     <string name="input_email_txtview">Please enter your Email: </string>
@@ -12,7 +13,12 @@
     <string name="confirm_pass_txtview">Confirm your password:</string>
     <string name="signup_btn">Sign Up</string>
     <string name="name">Name:</string>
-    <string name="full_name_sign">Donald Trump</string>
-    <string name="password">Password</string>
+    <string name="full_name_sign">Name</string>
     <string name="email_address">john123@gmail.com</string>
+    <string name="passwords_dont_match">Passwords don\'t match.</string>
+    <string name="please_enter_email">Please enter email.</string>
+    <string name="please_enter_name">Please enter name.</string>
+    <string name="password_empty">Password is empty</string>
+    <string name="e_mail_hint">E-mail</string>
+    <string name="confirm_password_hint">Confirm Password</string>
 </resources>
