Add auto log in, and log out features
Added auto log in and log out via storing SharedPreferences. The user is
able to sign in, and the app will store it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="email_empty_login">E-mail is empty</string>
     <string name="success_sign_up">Successfully signed up</string>
     <string name="no_success_sign_up">Request unsuccessful</string>
+    <string name="logged_out">Logged Out</string>
 </resources>
