--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,9 @@
     <string name="password">Password</string>
     <string name="sign_up_prompt">Don\'t Have An Account?  Sign Up Here</string>
     <string name="signup_txtview">Sign Up</string>
-    <string name="input_email_txtview">Please enter your Email: </string>
+    <string name="input_email_txtview">Please enter an E-mail address: </string>
+    <string name="input_user_email">Enter a username or e-mail: </string>
+    <string name="user_email_hint">Username or E-mail</string>
     <string name="input_pass_txtview">Choose a password:</string>
     <string name="confirm_pass_txtview">Confirm your password:</string>
     <string name="signup_btn">Sign Up</string>
@@ -31,4 +33,7 @@
     <string name="success_sign_up">Successfully signed up</string>
     <string name="no_success_sign_up">Request unsuccessful</string>
     <string name="logged_out">Logged Out</string>
+    <string name="add_monitoring_btn">ADD</string>
+    <string name="add">+</string>
+    <string name="add_user_button">MONITOR</string>
 </resources>
