--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,12 @@
     <string name="add_user_button">MONITOR</string>
     <string name="remove_user_alert">Are you sure?</string>
     <string name="remove_group">REMOVE GROUP</string>
+    <string name="ok">CONFIRM</string>
+    <string name="select_destination">Select Destination</string>
+    <string name="destination">Destination:</string>
+    <string name="select_starting_location">Select Starting Location</string>
+    <string name="starting_location">Starting Location:</string>
+    <string name="enter_group_name">Enter Group Name</string>
+    <string name="group_name">Group Name:</string>
+    <string name="add_group">Add Group</string>
 </resources>
