--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="enter_group_name">Enter Group Name</string>
     <string name="group_name">Group Name:</string>
     <string name="add_group">Add Group</string>
+    <string name="create_group">Create Group</string>
 </resources>
