--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="monitored">You are being monitored by: </string>
     <string name="password_empty_login">Password is empty</string>
     <string name="email_empty_login">E-mail is empty</string>
+    <string name="group_id_empty">Enter a group I.D.</string>
     <string name="success_sign_up">Successfully signed up</string>
     <string name="no_success_sign_up">Request unsuccessful</string>
     <string name="logged_out">Logged Out</string>
@@ -38,4 +39,7 @@
     <string name="add_user_button">MONITOR</string>
     <string name="remove_user_alert">Are you sure?</string>
     <string name="email_not_found"> Email is not found.</string>
+    <string name="group_not_found">Group is not found.</string>
+    <string name="remove_from_group">REMOVE "USER" FROM A GROUP</string>
+    <string name="add_to_group">ADD "USER" TO A GROUP</string>
 </resources>
