--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="group_name">Group Name:</string>
     <string name="add_group">Add Group</string>
     <string name="create_group">Create Group</string>
+    <string name="email_not_found">E-mail not found</string>
 </resources>
