--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="remove_user_alert">Are you sure?</string>
     <string name="email_not_found"> Email is not found.</string>
     <string name="group_not_found">Group is not found.</string>
+    <string name="group_id">Enter a group I.D.</string>
     <string name="remove_from_group">REMOVE "USER" FROM A GROUP</string>
     <string name="add_to_group">ADD "USER" TO A GROUP</string>
 </resources>
