--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,12 +36,13 @@
     <string name="logged_out">Logged Out</string>
     <string name="add_monitoring_btn">ADD</string>
     <string name="add">+</string>
-    <string name="remove_user_txtview">You are about to remove this user from your monitor list!</string>
+    <string name="remove_user_txtview">You are about to remove this-user from your monitor list!</string>
+    <string name="removal_from_group">You are about to remove this-user from this-group!</string>
     <string name="add_user_button">MONITOR</string>
     <string name="remove_user_alert">Are you sure?</string>
     <string name="email_not_found"> Email is not found.</string>
     <string name="group_not_found">Group is not found.</string>
     <string name="group_id">Enter a group I.D.</string>
-    <string name="remove_from_group">REMOVE "USER" FROM A GROUP</string>
-    <string name="add_to_group">ADD "USER" TO A GROUP</string>
+    <string name="remove_from_group">REMOVE THIS-USER FROM A GROUP</string>
+    <string name="add_to_group">ADD THIS-USER TO A GROUP</string>
 </resources>
