Adding functionality to remove monitored user from groups.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,10 @@
     <string name="add_monitoring_btn">ADD</string>
     <string name="add">+</string>
     <string name="remove_user_txtview">You are about to remove this-user from your monitor list!</string>
+    <string name="remove_monitored">You are about to stop this-user from monitoring you!</string>
     <string name="removal_from_group">You are about to remove this-user from this-group!</string>
-    <string name="add_user_button">MONITOR</string>
+    <string name="monitor">MONITOR</string>
+    <string name="get_monitored">GET MONITORED</string>
     <string name="remove_user_alert">Are you sure?</string>
     <string name="email_not_found"> Email is not found.</string>
     <string name="group_not_found">Group is not found.</string>
