--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="group_name">Group Name:</string>
     <string name="add_group">Add Group</string>
     <string name="create_group">Create Group</string>
+    <string name="leader_tag">leader</string>
+    <string name="you_are_leader">You are this group\'s leader</string>
 </resources>
