Implement complete delete user from group functionality
The group details activity fully works! Also, the leader has a designated
tag. If the user is the leader of the group, then they will receive a
Toast notifying them of their status. Only then can they delete a user
from the group via an AlertDialog.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="create_group">Create Group</string>
     <string name="leader_tag">leader</string>
     <string name="you_are_leader">You are this group\'s leader</string>
+    <string name="cant_delete_leader">Cannot delete leader</string>
+    <string name="success_deletion">Successfully deleted user</string>
 </resources>
