--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="add_group">Add Group</string>
     <string name="create_group">Create Group</string>
     <string name="comment">/////</string>
+    <string name="add_group_name">Enter a group name:</string>
 </resources>
