--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,6 @@
     <string name="grade_students_sign_up">Grade (Students only)</string>
     <string name="teacher_students_sign_up">Teacher (Students only)</string>
     <string name="emergency_contact_info_sign_up">Emergency contact Info</string>
+    <string name="account_info">Account Info</string>
+    <string name="log_out">Log Out</string>
 </resources>
