Set up account info activity.
However, there are issues with retrieving the optional information
back from the server. Will look into this later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,6 @@
     <string name="emergency_contact_info_sign_up">Emergency contact Info</string>
     <string name="account_info">Account Info</string>
     <string name="log_out">Log Out</string>
+    <string name="update_info">Update Info</string>
+    <string name="account_information">Account Information</string>
 </resources>
