Fix bug with layout
The layout had a minor bug that I fixed before pushing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
     <string name="log_out">Log Out</string>
     <string name="update_info">Update Info</string>
     <string name="account_information">Account Information</string>
+    <string name="user_info">User Info</string>
+    <string name="birth_year">Birth year</string>
+    <string name="birth_month">Birth month</string>
 </resources>
