--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="signup_btn">Sign Up</string>
     <string name="duplicated_email"> Email is already registered.</string>
     <string name="welcome_user_name"><![CDATA[Welcome <user name>!]]></string>
-    <string name="view_map">View Map</string>
+    <string name="start">start</string>
+    <string name="view_map">start</string>
     <string name="manage_monitoring">Manage Monitoring</string>
     <string name="manage_group">Manage Groups</string>
     <string name="please_enter_name"> Please enter your name </string>
@@ -63,6 +64,8 @@
     <string name="success_deletion">Successfully deleted user</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="send">Send</string>
+    <string name="cancel">Cancel</string>
     <string name="remove_user_from_group_prompt">Would you remove this user from the group?</string>
     <string name="error_occurred">Error occurred</string>
     <string name="no_users_string">No users are in this group</string>
