Add action bar links to MapsActivity
Action bar is now displays the link content that would be used
in the rest of the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,5 @@
     <string name="manage_groups">Manage Groups</string>
     <string name="add_user_monitor_you">Add User to Monitor You</string>
     <string name="user_to_monitor">Add User to Monitor</string>
+    <string name="map">Map</string>
 </resources>
