Updated various UI elements to make them more aesthetically pleasing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,7 +98,7 @@
     <string name="manage_groups">Groups</string>
     <string name="add_user_monitor_you">Add User to Monitor You</string>
     <string name="user_to_monitor">Add User to Monitor</string>
-    <string name="leader_of_group">Leader of the group is:</string>
+    <string name="leader_of_group">Group leader: </string>
     <string name="parent_information">Parents:</string>
     <string name="map">Map</string>
     <string name="title_activity_parent_maps">Map</string>
