Added Emergency messages but not yet working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,5 @@
     <string name="parents_message">Monitoring Message</string>
     <string name="group_message">Group Message</string>
     <string name="title_activity_parent_maps">Map</string>
+    <string name="emergency_message">Emergency Message</string>
 </resources>
