--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     <string name="emergency_message">Emergency Message</string>
     <string name="parentDashboard">Parent Dashboard</string>
     <string name="emergency_button">Panic Button</string>
+    <string name="gradel">.</string>
 </resources>
