Can now see unread messages from Parents Dashboard
Now, the user can see unread messages from Parent's Dashboard,
as well as access it easily.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="parentDashboard">Parent Dashboard</string>
     <string name="emergency_button">Panic Button</string>
     <string name="gradel">.</string>
+    <string name="parent_dashboard">Parent Dashboard</string>
 </resources>
