--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="parentDashboard">Parent Dashboard</string>
     <string name="emergency_button">Panic Button</string>
     <string name="parent_dashboard">Parent Dashboard</string>
+    <string name="permissions"> Permissions</string>
 </resources>
