--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,5 @@
     <string name="reward_types">%1$s: %2$s</string>
     <string name="current_points">Your current points: %s</string>
     <string name="total_score_display">Your total score is: %d</string>
+    <string name="leaderboard">Leaderboard</string>
 </resources>
