--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,6 @@
     <string name="current_points">Your current points: %s</string>
     <string name="total_score_display">Your total score is: %d</string>
     <string name="leaderboard">Leaderboard</string>
+    <string name="apply">Apply</string>
+    <string name="applied">Applied</string>
 </resources>
