added permissions to the messaging activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,5 +131,5 @@
     <string name="apply">Apply</string>
     <string name="applied">Applied</string>
     <string name="not_enough_points">You do not have enough points. Keep walking!</string>
-    <string name="permissions_button">permissions</string>
+    <string name="permissions_button">Requests</string>
 </resources>
