--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">WalkingGroup</string>
-    <string name="apikey" tools:ignore="TypographyDashes">51B4A229-C683-477B-B37E-1ABF72610F869</string>
+    <string name="apikey" tools:ignore="TypographyDashes"></string>
     <string name="loginTitle">Login</string>
     <string name="emailEdit">E-mail</string>
     <string name="sign_up_prompt">Don\'t Have An Account?  Sign Up Here</string>
